[package]
name = "geom"
version = "0.1.0"
authors = ["Kurt Lawrence <kurtlawrence92@gmail.com>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
# workspace

# crates.io
byteorder = "1"
dxf = { git = "https://github.com/ixmilia/dxf-rs" }
log = "0.4"
nom = "7"
rayon = "1"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
path = "benches.rs"
harness = false

[[test]]
name = "data-interop"
path = "data/interop-test.rs"

