[package]
name = "geom"
version = "0.1.0"
authors = ["Kurt Lawrence <kurtlawrence92@gmail.com>"]
edition = "2021"

[features]
default = ["io"]
io = ["dep:byteorder", "dep:dxf", "dep:log", "dep:nom"]



[dependencies]
rayon = "1"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }

# For io
byteorder = { version = "1", optional = true }
dxf = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
nom = { version = "7", optional = true }

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"        

[[bench]]
name = "benches"
harness = false

[[test]]
name = "data-interop"
path = "test/interop-test.rs"